Update application example
