# app/src/main/java/br/com/cleanarch/core/entity/CarAdsBusiness.java
@@ -1,4 +1,12 @@
 package br.com.cleanarch.core.entity;
 
-public class CarAdsBusiness {
+public record CarAdsBusiness(Long id,
+                             String brand,
+                             String model,
+                             String city,
+                             Double km,
+                             Long modelFabricationYear,
+                             Long modelYear,
+                             Double price,
+                             String seller) {
 }
