# openapi-spec.yml
@@ -9,7 +9,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
 servers:
-  - url: http:/localhost:8080/api/v1
+  - url: /api/v1
 tags:
   - name: car
     description: Everything about your car ads search
@@ -42,10 +42,10 @@ paths:
   /cars-ads/{carAdsSearchId}:
     get:
       tags:
-        - pet
+        - car
       summary: Find car ads by id
       description: Returns car ads result from created search
-      operationId: findCarAdsBySearchId
+      operationId: findCarAdsById
       parameters:
         - name: carAdsSearchId
           in: path
@@ -101,14 +101,14 @@ components:
         model:
           type: string
           examples: [ "CRV" ]
-        modelFabricationYear:
-          type: integer
-          format: int64
-          examples: [ 2008 ]
-        modelYear:
+        minYear:
           type: integer
           format: int64
           examples: [ 2009 ]
+        maxYear:
+          type: integer
+          format: int64
+          examples: [ 2008 ]
         minKm:
           type: number
           format: double
@@ -146,6 +146,19 @@ components:
             seller:
               type: string
               examples: [ "José - 11 92223-4442 - jose_b@rust.ru" ]
+            km:
+              type: number
+              format: double
+              minimum: 0
+              examples: [ 40.998 ]
+            modelYear:
+              type: integer
+              format: int64
+              examples: [ 2009 ]
+            modelFabricationYear:
+              type: integer
+              format: int64
+              examples: [ 2008 ]
     CarAdsResponseList:
       type: object
       properties:
